# bsky-event-ingester

./: .gitignore  Cargo.toml  README.md  generate_country_names.py  schema.sql
.github/workflows/: ci.yml  release.yml
.sqlx/: query-02a0efb561eab0c367f609e490e0e97392450746accae30d2bb51ce2981f95ad.json  query-034cc4f373523e84aa41848220cada68b669a449c4d72f67785f47a61b9be131.json  query-096b76f50557e8fee46f6eb22df5d5a7451cf7f44a68b7994163b186e672e95c.json  query-20b482e28cb3cc2509c3b5cc7f65bd35f90f6f8c370dd0ea5e436d2d49f328a0.json  query-2f628b822ac0fd49167e685a57702be1a85556d93b6bea9679ed903464c7c7fc.json  query-2ff7ac5389a31712716a8644ca89c68b7df59c8f3b13dea9e23e5795d9340dae.json  query-4a93304da3a21d18e514ecd838f56174b5ee2bc446841dc7c54d2e6d62a5eaf4.json  query-4da43f1e89768f1d87aa0dc1d26356e03a22b77149ddfc1439eb7245171c05b8.json  query-7329f9147e27863450964301b8b2d3588cdc7ace4725461d77d06ff16454789a.json  query-7562fcd5e8c090abdf824ffead859a44583a8247262aa4a7c94f25b4667bb58d.json  query-8110da1bb3db2e7fbfad2f5db3cd1d8d1bbbe403be5bfbbdb0984387d62c8dce.json  query-85c6eb84505d8792fbc791f5ba0f95eb04f632527346717f5d18e8ab0900b0de.json  query-938e3be3abb6a5bbd8e53e0db1ce11d8269a11c5bb170c98fff36a5882a53a19.json  query-9cdab839f116f4ec69539b0f922545b5d908c2754ac3241041608a19baabd3fb.json  query-d347605b8727c8947f5c94516890d2fa5105bea0948e2e24d087547a816f3079.json  query-e1f95bc30927d28cbd3eae10bdea91dd1e28745f9a9f406d86eea2d9e030fad3.json  query-ee3e8542478d9196e4e0227985dfbb2d435061bb982486842fe800e86c48fbbc.json  query-f02e4b66912db512edf39c5e71b0bd331f3d8de76d447fc39b0e34888b3d613f.json  query-fbe993cb6a0f7a55c34dd7befcdb204d9ac2e4c6a458fbaa98dca12d0b0cd002.json
keydates-worker/: README.md  keydates_worker.py  test_keydates_worker.py  test_ledger.py
scripts/: deploy.sh  droplet-cleanup.sh  test_deploy.sh
src/: base26.rs  con_posts.rs  countries.rs  keydates_announce.rs  labels.rs  lib.rs  main.rs  roman.rs  slug.rs
src/jetstream/: event.rs  mod.rs
ui/: .gitignore  lingui.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/app/: absurd.ts  bluesky.ts  config.ts  context.ts  contexts.ts  continents.ts  date.ts  endpoints.ts  hooks.ts  qp.ts  removeDiacritics.ts  root.tsx  styles.css  vite-env.d.ts
ui/app/components/: Avatar.tsx  Calendar.tsx  ConDetails.tsx  ConRow.module.css  ConRow.tsx  ConsList.module.css  ConsList.tsx  ConsListPage.tsx  EmptyIcon.tsx  EmptyState.tsx  FilterBar.tsx  Flag.module.css  Flag.tsx  GlobalMemoContext.tsx  LikeButton.tsx  LinguiProvider.tsx  LoadErrorAlert.tsx  LocalAttendingContextProvider.tsx  LocaleSelector.tsx  Map.module.css  Map.tsx  SimpleErrorBoundary.tsx  UserDetails.tsx
ui/app/components/Map/: style.ts
ui/app/components/cons/: ListView.tsx  (+2 more)
ui/app/locales/: index.ts
ui/app/routes/: $.tsx  $slug.tsx  $userOrConId.tsx  _index.tsx  calendar.tsx  cons.$identifier.tsx  cons.$slug.tsx  login.tsx  map.tsx  users.$actor.tsx
ui/public/: client-metadata.json
ui/public/.well-known/: atproto-did
(+3 files in other folders)
