[package]
name = "furcons-bsky-labeler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
atrium-api = "0.25"
atrium-crypto = "0.1"
atrium-xrpc-client = "0.5"
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["query"] }
chrono = "0.4"
chrono-tz = "0.10"
config = "0.15"
deunicode = "1"
env_logger = "0.11"
futures = "0.3"
google_maps = "3"
htmlize = { version = "1", features = ["unescape"] }
icu_casemap = "2"
icu_locale = "2"
icu_normalizer = "2"
ipld-core = { version = "0.4", features = ["serde"] }
jetstream-oxide = "0.1"
log = "0.4"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
minicbor = { version = "1", features = ["alloc"] }
nu-json = "0.76"
rand = "0.8"
regex = { version = "1", features = ["unicode"] }
reqwest = "0.12"
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_ipld_dagcbor = "0.6"
serde_json = "1"
serde_with = "3"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
