[package]
name = "bsky-event-ingester"
version = "0.1.0"
edition = "2021"
default-run = "bsky-event-ingester"

[dependencies]
anyhow = "1"
atrium-api = "0.25"
atrium-crypto = "0.1"
atrium-xrpc-client = "0.5"
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["query"] }
chrono = "0.4"
chrono-tz = "0.10"
config = "0.15"
env_logger = "0.11"
futures = "0.3"
ipld-core = { version = "0.4", features = ["serde"] }
jetstream-oxide = "0.1"
log = "0.4"
regex = { version = "1", features = ["unicode"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_ipld_dagcbor = "0.6"
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["connect", "url"] }
zstd = "0.13"
